crates/pg_syntax/tests/snapshots/postgres_regress/explain@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select explain_filter('explain (analyze) select * from int8_tbl i8');"
---
SelectStmt@0..69
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..67
    FuncCall@7..67
      Ident@7..21 "explain_filter"
      Ascii40@21..22 "("
      AConst@22..67
        Sconst@22..67 "'explain (analyze) se ..."
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

