crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@108.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM T ORDER BY pk;
---
SelectStmt@0..28
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..15
    Ident@14..15 "T"
  Whitespace@15..16 " "
  SortBy@16..27
    Order@16..21 "ORDER"
    Whitespace@21..22 " "
    By@22..24 "BY"
    Whitespace@24..25 " "
    ColumnRef@25..27
      Ident@25..27 "pk"
  Ascii59@27..28 ";"

