crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@16.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO T VALUES (1), (2);"
---
InsertStmt@0..30
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..13
    Ident@12..13 "T"
  Whitespace@13..14 " "
  SelectStmt@14..28
    Values@14..20 "VALUES"
    Whitespace@20..21 " "
    Ascii40@21..22 "("
    List@22..23
      AConst@22..23
        Iconst@22..23 "1"
    Ascii41@23..24 ")"
    Ascii44@24..25 ","
    Whitespace@25..26 " "
    Ascii40@26..27 "("
    List@27..28
      AConst@27..28
        Iconst@27..28 "2"
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

