crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@163.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO t (a,b,c) VALUES (1,2,NULL);"
---
InsertStmt@0..40
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..13
    Ident@12..13 "t"
  Whitespace@13..14 " "
  Ascii40@14..15 "("
  ResTarget@15..16
    Ident@15..16 "a"
  Ascii44@16..17 ","
  ResTarget@17..18
    Ident@17..18 "b"
  Ascii44@18..19 ","
  ResTarget@19..20
    Ident@19..20 "c"
  Ascii41@20..21 ")"
  Whitespace@21..22 " "
  SelectStmt@22..38
    Values@22..28 "VALUES"
    Whitespace@28..29 " "
    Ascii40@29..30 "("
    List@30..38
      AConst@30..31
        Iconst@30..31 "1"
      Ascii44@31..32 ","
      AConst@32..33
        Iconst@32..33 "2"
      Ascii44@33..34 ","
      AConst@34..38
        NullP@34..38 "NULL"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

